[package]
name = "bitcoin-donation"
description = "Generate a Bitcoin address for donations."
version = "0.1.0"
authors = ["Cooper Paul EdenDay <cedenday@protonmail.com>"]

[dependencies]
serde = { version = "^1.0.11", features = ["derive"] }
serde_json = "^1.0.2"
futures = "^0.1.14"
hyper = "^0.11.2"
tokio-core = "^0.1.9"
